--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "php" : ">=8.1",
-        "illuminate/database": "^6.0|^7.0|^8.0|^9.0"
+        "illuminate/database": "^9.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0|^9.0",
